integration-test/images/casual-java/wls/openshift/deploymentconfig-casual-only.yaml
apiVersion: v1
kind: Template
metadata:
  name: casual-template
objects:
- apiVersion: "v1"
  kind: DeploymentConfig
  metadata:
    name: "casual"
    labels:
      app: "casual"
  spec:
    replicas: 1
    selector:
      app: "casual"
      deploymentconfig: "casual"
    template:
      metadata:
        labels:
          app: "casual"
          deploymentconfig: "casual"
      spec:
        containers:
          - image: "${REGISTRY}/${NAMESPACE}/casual-domain:latest"
            name: "casual-domain"
            ports:
              - containerPort: 7771
                protocol: "TCP"                          
    strategy: 
      type: "Rolling"
    triggers:
    - type: ConfigChange    
    - imageChangeParams:
        automatic: true
        containerNames:
          - casual-domain
        from:
          kind: ImageStreamTag
          name: 'casual-domain:latest'
          namespace: "${NAMESPACE}"
      type: ImageChange

parameters:
- description: Registry address
  displayName: Registry address
  name: REGISTRY
  required: false
  value: "172.30.1.1:5000"
- description: The namespace
  displayName: The namespace
  name: NAMESPACE
  required: false
  value: "myproject"
