integration-test/images/casual-java/wls/openshift/deploymentconfig.yaml
apiVersion: v1
kind: Template
metadata:
  name: casual-with-wls-template
objects:
- apiVersion: "v1"
  kind: DeploymentConfig
  metadata:
    name: "casual-with-wls-java"
    labels:
      app: "casual-with-wls-java"
  spec:
    replicas: 1
    selector:
      app: "casual-with-wls-java"
      deploymentconfig: "casual-with-wls-java"
    template:
      metadata:
        labels:
          app: "casual-with-wls-java"
          deploymentconfig: "casual-with-wls-java"
      spec:
        containers:
          - image: "${REGISTRY}/${NAMESPACE}/casual-domain:latest"
            name: "casual-domain"
            ports:
              - containerPort: 7771
                protocol: "TCP"
                
          - image: "${REGISTRY}/${NAMESPACE}/casual-weblogic-jca:latest"
            name: "casual-weblogic-jca"        
            ports:
              - containerPort: 7772
                protocol: "TCP"
              - containerPort: 7001
                protocol: "TCP"
              - containerPort: 7002
                protocol: "TCP"            
    strategy: 
      type: "Rolling"
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - wls-casual-java-test-application
        from:
          kind: ImageStreamTag
          name: 'casual-weblogic-jca:latest'
          namespace: "${NAMESPACE}"
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - casual-domain
        from:
          kind: ImageStreamTag
          name: 'casual-domain:latest'
          namespace: "${NAMESPACE}"
      type: ImageChange

parameters:
- description: Registry address
  displayName: Registry address
  name: REGISTRY
  required: false
  value: "172.30.1.1:5000"
- description: The namespace
  displayName: The namespace
  name: NAMESPACE
  required: false
  value: "myproject"
