integration-test/images/casual-java/wls/openshift/service-casual.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "casual"
    name:  "casual"
  spec:
    ports:
    - name: 7771-tcp
      port: 7771
      protocol: TCP
      targetPort: 7771
    selector:
      app: "casual"
      deploymentconfig: "casual"
