integration-test/images/casual-java/wls/openshift/service.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: "casual-with-wls-java"
    name:  "casual-with-wls-java"
  spec:
    ports:
    - name: 7001-tcp
      port: 7001
      protocol: TCP
      targetPort: 7001
    - name: 7002-tcp
      port: 7002
      protocol: TCP
      targetPort: 7002
    selector:
      app: "casual-with-wls-java"
      deploymentconfig: "casual-with-wls-java"
