integration-test/images/casual-java/wls/openshift/admin-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: "casual-with-wls-java"
  name: "casual-with-wls-java-admin"
spec:
  port:
    targetPort: 7001
  to:
    kind: Service
    name: "casual-with-wls-java"
